--- a/rational/rational.vcxproj.filters
+++ b/rational/rational.vcxproj.filters
@@ -26,7 +26,10 @@
     <ClInclude Include="RationalNum.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="errors.h">
+    <ClInclude Include="Errors.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="CompSigns.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
